openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloudant-extractor
  labels:
    app: cloudant-extractor
spec:
  to:
    kind: Service
    name: cloudant-extractor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

# Made with Bob
